--- a/css/style.scss
+++ b/css/style.scss
@@ -584,8 +584,117 @@ label{
     color: #ededed;
 }
 
+// Pop Up
+#contact_us_popup{
+    padding: 2% !important;
+}
+.group{ 
+    position:relative; 
+    margin-bottom:45px; 
+  }
 
+  input{
+    font-size:18px;
+    padding:10px 10px 10px 5px;
+    display:block;
+    width:300px;
+    border:none;
+    border-bottom:1px solid #757575;
+  }
 
+ .btn-send{
+    @extend %buttons;
+    @extend %button-menu;
+    display: block;
+    margin: 0 auto;
+    background-color: $color-prim !important;
+    border-color: $color-prim;
+}
+  
+  /* LABEL ======================================= */
+  label{
+    color:#999; 
+    font-size:18px;
+    font-weight:normal;
+    position:absolute;
+    pointer-events:none;
+    left:5px;
+    top:10px;
+    transition:0.2s ease all; 
+    -moz-transition:0.2s ease all; 
+    -webkit-transition:0.2s ease all;
+  }
+  
+  /* active state */
+  .inpt_change{
+    top:-20px;
+    font-size:14px;
+    color:#5264AE;
+    outline:none;
+  }
+  
+  /* BOTTOM BARS ================================= */
+  .bar{ 
+      position:relative; 
+      display:block; 
+      width:300px; 
+    }
+  .bar:before, 
+  .bar:after{
+    content:'';
+    height:2px; 
+    width:0;
+    bottom:1px; 
+    position:absolute;
+    background:#5264AE; 
+    transition:0.2s ease all; 
+    -moz-transition:0.2s ease all; 
+    -webkit-transition:0.2s ease all;
+  }
+  .bar:before {
+    left:50%;
+  }
+  .bar:after {
+    right:50%; 
+  }
+  
+  /* active state */
+  .bar1:before,
+  .bar1:after {
+    width:50%;
+  }
+  
+  /* HIGHLIGHTER ================================== */
+  .highlight {
+    position:absolute;
+    height:60%; 
+    width:100px; 
+    top:25%; 
+    left:0;
+    pointer-events:none;
+    opacity:0.5;
+  }
+  
+  /* active state */
+  input:focus + .highlight {
+    -webkit-animation:inputHighlighter 0.3s ease;
+    -moz-animation:inputHighlighter 0.3s ease;
+    animation:inputHighlighter 0.3s ease;
+  }
+  
+  /* ANIMATIONS ================ */
+  @-webkit-keyframes inputHighlighter {
+      from { background:#5264AE; }
+    to 	{ width:0; background:transparent; }
+  }
+  @-moz-keyframes inputHighlighter {
+      from { background:#5264AE; }
+    to 	{ width:0; background:transparent; }
+  }
+  @keyframes inputHighlighter {
+      from { background:#5264AE; }
+    to 	{ width:0; background:transparent; }
+  }
 
 
 // !!!***---MEDIA QUERIES---***!!!
