--- a/css/style.css
+++ b/css/style.css
@@ -721,54 +721,54 @@ li .btn-outline-primary {
 
 /* line 315, style.scss */
 label {
-  color: #fff;
+  left: 25px !important;
 }
 
-/* line 319, style.scss */
+/* line 320, style.scss */
 #form_long input,
 #form_long select {
   background-color: #fff;
 }
 
-/* line 325, style.scss */
+/* line 326, style.scss */
 .form-arrow {
   background: url(/img/chevron-down-solid.svg) 50% 200px no-repeat;
   background-position: 95% center !important;
   background-size: 15px;
 }
 
-/* line 332, style.scss */
+/* line 333, style.scss */
 #form_long button {
   display: block;
   margin: 0 auto;
   background-color: #0073B3 !important;
   border-color: #fff !important;
-  padding: .6em 4.5em !important;
+  padding: .6em 5.5em !important;
 }
 
-/* line 344, style.scss */
+/* line 345, style.scss */
 .custom-select {
   cursor: pointer;
 }
 
-/* line 348, style.scss */
+/* line 349, style.scss */
 .card {
   border-radius: .55rem;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
-/* line 352, style.scss */
+/* line 353, style.scss */
 .card-title_container {
   background-color: #0073B3 !important;
 }
 
-/* line 356, style.scss */
+/* line 357, style.scss */
 .card-title_container h6 {
   margin: .5em !important;
 }
 
-/* line 360, style.scss */
+/* line 361, style.scss */
 .card-body p {
   text-align: center;
   font-weight: bold;
@@ -776,7 +776,7 @@ label {
   color: #0073B3;
 }
 
-/* line 368, style.scss */
+/* line 369, style.scss */
 .dollar {
   font-weight: bold;
   font-size: 24px;
@@ -784,23 +784,23 @@ label {
   vertical-align: super;
 }
 
-/* line 375, style.scss */
+/* line 376, style.scss */
 .month {
   font-weight: bold;
   font-size: 24px;
 }
 
-/* line 381, style.scss */
+/* line 382, style.scss */
 .list-group-item {
   border: none !important;
 }
 
-/* line 385, style.scss */
+/* line 386, style.scss */
 .card svg {
   margin: 0 auto;
 }
 
-/* line 389, style.scss */
+/* line 390, style.scss */
 .card button {
   display: block;
   margin: 0 auto;
@@ -813,29 +813,29 @@ label {
   left: 21%;
 }
 
-/* line 403, style.scss */
+/* line 404, style.scss */
 .card-right .card-title_container {
   background-color: #112d4e !important;
 }
 
-/* line 407, style.scss */
+/* line 408, style.scss */
 .card-right p {
   color: #112d4e;
 }
 
-/* line 411, style.scss */
+/* line 412, style.scss */
 .card-right button {
   background-color: #112d4e !important;
   border-color: #112d4e;
 }
 
-/* line 418, style.scss */
+/* line 419, style.scss */
 #partners img {
   max-height: 70%;
   -webkit-filter: opacity(0.5);
 }
 
-/* line 423, style.scss */
+/* line 424, style.scss */
 #partners img:hover {
   max-height: 80%;
   -webkit-filter: opacity(1);
@@ -844,7 +844,7 @@ label {
   cursor: pointer;
 }
 
-/* line 432, style.scss */
+/* line 433, style.scss */
 .review_carusel .item {
   border-radius: .55rem;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
@@ -854,7 +854,7 @@ label {
   height: 250px;
 }
 
-/* line 440, style.scss */
+/* line 441, style.scss */
 .review_quotes {
   position: absolute;
   top: -70%;
@@ -868,7 +868,7 @@ label {
   font-size: 250px;
 }
 
-/* line 453, style.scss */
+/* line 454, style.scss */
 .item .review-txt {
   font-size: 18px;
   font-weight: 800;
@@ -876,21 +876,21 @@ label {
   margin: 9% 9% 2% 9%;
 }
 
-/* line 464, style.scss */
+/* line 465, style.scss */
 .faq_ttl {
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-weight: 900;
 }
 
-/* line 471, style.scss */
+/* line 472, style.scss */
 .faq_descr {
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   font-weight: 100;
 }
 
-/* line 478, style.scss */
+/* line 479, style.scss */
 .row_faqs button {
   display: block;
   margin: 0 auto;
@@ -898,36 +898,36 @@ label {
   border-color: #3f72af;
 }
 
-/* line 487, style.scss */
+/* line 488, style.scss */
 .faq_hid-left,
 .faq_hid-right {
   display: none;
 }
 
-/* line 494, style.scss */
+/* line 495, style.scss */
 .map_row {
   position: relative;
 }
 
-/* line 498, style.scss */
+/* line 499, style.scss */
 section.map {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 504, style.scss */
+/* line 505, style.scss */
 iframe {
   margin-top: -50px;
   pointer-events: none;
 }
 
-/* line 509, style.scss */
+/* line 510, style.scss */
 .clicked {
   pointer-events: auto;
 }
 
-/* line 513, style.scss */
+/* line 514, style.scss */
 .map_informer {
   position: absolute;
   left: 25%;
@@ -937,19 +937,19 @@ iframe {
   z-index: 1;
 }
 
-/* line 522, style.scss */
+/* line 523, style.scss */
 .map_informer_ttl {
   font-size: 26px;
   font-weight: 900;
   margin: 2.5em 0 1.5em 1em;
 }
 
-/* line 529, style.scss */
+/* line 530, style.scss */
 .map_info_block {
   margin: 0 0 1.5em 2em;
 }
 
-/* line 533, style.scss */
+/* line 534, style.scss */
 .map_informer_sub-ttl {
   font-size: 15px;
   font-weight: 100;
@@ -957,68 +957,68 @@ iframe {
   font-weight: 600;
 }
 
-/* line 541, style.scss */
+/* line 542, style.scss */
 .map_informer_info {
   font-size: 15px;
   font-weight: 100;
   color: #000;
 }
 
-/* line 549, style.scss */
+/* line 550, style.scss */
 #footer {
   background-color: #112d4e;
 }
 
-/* line 553, style.scss */
+/* line 554, style.scss */
 .footer_txt,
 .footer_txt a {
   color: #ededed;
 }
 
-/* line 559, style.scss */
+/* line 560, style.scss */
 .footer_txt-hdr {
   color: #ededed !important;
 }
 
-/* line 564, style.scss */
+/* line 565, style.scss */
 .footer_links {
   padding: 0;
   line-height: 2.2em;
 }
 
-/* line 569, style.scss */
+/* line 570, style.scss */
 .footer_links li {
   list-style: none;
 }
 
-/* line 573, style.scss */
+/* line 574, style.scss */
 .footer_icons img {
   margin-left: .4em;
   cursor: pointer;
 }
 
-/* line 578, style.scss */
+/* line 579, style.scss */
 .line {
   background-color: #fff;
 }
 
-/* line 582, style.scss */
+/* line 583, style.scss */
 .adress {
   color: #ededed;
 }
 
-/* line 588, style.scss */
+/* line 589, style.scss */
 #contact_us_popup {
   padding: 2% !important;
 }
 
-/* line 591, style.scss */
+/* line 592, style.scss */
 .group {
   position: relative;
   margin-bottom: 45px;
 }
 
-/* line 596, style.scss */
+/* line 597, style.scss */
 input {
   font-size: 18px;
   padding: 10px 10px 10px 5px;
@@ -1028,7 +1028,7 @@ input {
   border-bottom: 1px solid #757575;
 }
 
-/* line 605, style.scss */
+/* line 606, style.scss */
 .btn-send {
   display: block;
   margin: 0 auto;
@@ -1037,7 +1037,7 @@ input {
 }
 
 /* LABEL ======================================= */
-/* line 615, style.scss */
+/* line 616, style.scss */
 label {
   color: #999;
   font-size: 18px;
@@ -1052,7 +1052,7 @@ label {
 }
 
 /* active state */
-/* line 629, style.scss */
+/* line 630, style.scss */
 .inpt_change {
   top: -20px;
   font-size: 14px;
@@ -1061,14 +1061,14 @@ label {
 }
 
 /* BOTTOM BARS ================================= */
-/* line 637, style.scss */
+/* line 638, style.scss */
 .bar {
   position: relative;
   display: block;
   width: 300px;
 }
 
-/* line 642, style.scss */
+/* line 643, style.scss */
 .bar:before,
 .bar:after {
   content: '';
@@ -1082,25 +1082,25 @@ label {
   -webkit-transition: 0.2s ease all;
 }
 
-/* line 654, style.scss */
+/* line 655, style.scss */
 .bar:before {
   left: 50%;
 }
 
-/* line 657, style.scss */
+/* line 658, style.scss */
 .bar:after {
   right: 50%;
 }
 
 /* active state */
-/* line 662, style.scss */
+/* line 663, style.scss */
 .bar1:before,
 .bar1:after {
   width: 50%;
 }
 
 /* HIGHLIGHTER ================================== */
-/* line 668, style.scss */
+/* line 669, style.scss */
 .highlight {
   position: absolute;
   height: 60%;
@@ -1112,7 +1112,7 @@ label {
 }
 
 /* active state */
-/* line 679, style.scss */
+/* line 680, style.scss */
 input:focus + .highlight {
   -webkit-animation: inputHighlighter 0.3s ease;
   animation: inputHighlighter 0.3s ease;
@@ -1137,7 +1137,7 @@ input:focus + .highlight {
     background: transparent;
   }
 }
-/* line 701, style.scss */
+/* line 702, style.scss */
 .alert {
   width: 50%;
   margin: 0 auto;
@@ -1145,54 +1145,119 @@ input:focus + .highlight {
           box-shadow: 0 2px 5px #000;
 }
 
-/* line 711, style.scss */
+/* line 712, style.scss */
 .alert h5 {
   color: #000 !important;
   text-align: center !important;
 }
 
-/* line 717, style.scss */
+/* line 718, style.scss */
 .btn_learn a {
   color: #fff !important;
   text-decoration: none;
 }
 
-/* line 722, style.scss */
+/* line 723, style.scss */
 #test-popup {
   margin: 0 auto;
   width: 50%;
 }
 
-/* line 728, style.scss */
+/* line 729, style.scss */
 #test-popup p,
 #test-popup ul,
 #test-popup li {
   color: #fff !important;
 }
 
-@media (max-width: 1200px) {
-  /* line 743, style.scss */
+/* line 738, style.scss */
+.plan-popup {
+  text-align: center;
+}
+
+/* line 743, style.scss */
+.plan-popup span {
+  text-transform: uppercase;
+  color: red;
+  font-size: 1.5em !important;
+  text-decoration: underline;
+}
+
+@media (max-width: 1450px) {
+  /* line 756, style.scss */
+  .form_long-form label {
+    font-size: 14px !important;
+  }
+}
+@media (max-width: 1310px) {
+  /* line 762, style.scss */
+  .call2act_block h2 {
+    font-size: 38px;
+  }
+
+  /* line 765, style.scss */
+  #form_long button {
+    padding: .6em 3.5em !important;
+  }
+}
+@media (max-width: 1199px) {
+  /* line 772, style.scss */
   .hdr-pic {
     position: relative;
   }
 
-  /* line 746, style.scss */
+  /* line 775, style.scss */
   .hdr-content-ttl {
     margin: 0 auto;
   }
 
-  /* line 749, style.scss */
+  /* line 778, style.scss */
   .call2act_block p {
-    margin: 1em 12em;
+    margin: 3em 12em;
   }
 
-  /* line 753, style.scss */
+  /* line 782, style.scss */
   .card button {
     left: 40% !important;
   }
+
+  /* line 786, style.scss */
+  .form_long-form label {
+    font-size: 12px !important;
+  }
+
+  /* line 790, style.scss */
+  #form_long button {
+    padding: .6em 10% !important;
+    margin-top: 5%;
+  }
+
+  /* line 795, style.scss */
+  .form_long-form {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+
+  /* line 800, style.scss */
+  .form_long-form select,
+  .form_long-form input {
+    margin: 4% 0%;
+  }
+
+  /* line 805, style.scss */
+  .form_long-form label {
+    font-size: 15px !important;
+    margin-top: 4%;
+  }
+
+  /* line 810, style.scss */
+  .btn-comp-plans {
+    display: block;
+    width: 100%;
+  }
 }
 @media (max-width: 1100px) {
-  /* line 759, style.scss */
+  /* line 817, style.scss */
   .map_informer {
     position: inherit !important;
     left: 0;
@@ -1201,52 +1266,67 @@ input:focus + .highlight {
   }
 }
 @media (max-width: 991px) {
-  /* line 768, style.scss */
+  /* line 826, style.scss */
   .card button {
     left: 35% !important;
   }
+
+  /* line 830, style.scss */
+  .nav-item,
+  .nav-item button {
+    margin-top: .5em !important;
+  }
 }
 @media (max-width: 800px) {
-  /* line 774, style.scss */
+  /* line 837, style.scss */
   .call2act_block p {
-    margin: 1em 4em;
+    margin: 2em 4em;
   }
 }
 @media (max-width: 767px) {
-  /* line 780, style.scss */
+  /* line 843, style.scss */
   .card button {
     left: 30% !important;
   }
+
+  /* line 846, style.scss */
+  #test-popup h2 {
+    font-size: 28px;
+  }
 }
 @media (max-width: 600px) {
-  /* line 786, style.scss */
+  /* line 852, style.scss */
   .review_carusel .item {
     width: 400px;
   }
 }
 @media (max-width: 470px) {
-  /* line 793, style.scss */
+  /* line 859, style.scss */
   .card button {
     left: 27% !important;
   }
+
+  /* line 863, style.scss */
+  .call2act_block h2 {
+    font-size: 30px !important;
+  }
 }
 @media (max-width: 420px) {
-  /* line 799, style.scss */
+  /* line 869, style.scss */
   .card button {
     left: 25% !important;
   }
 }
 @media (max-width: 400px) {
-  /* line 805, style.scss */
+  /* line 875, style.scss */
   .card button {
     left: 20% !important;
   }
 }
 @media (max-width: 310px) {
-  /* line 811, style.scss */
+  /* line 881, style.scss */
   .card button {
     left: 15% !important;
   }
 }
-
 /*# sourceMappingURL=style.css.map */
