--- a/css/style.scss
+++ b/css/style.scss
@@ -313,8 +313,9 @@ li .btn-outline-primary{
 }
 
 label{
-    color: #fff;
+    left: 25px !important;
 }
+
 
 #form_long input,
 #form_long select{
@@ -336,7 +337,7 @@ label{
     margin: 0 auto;
     background-color: #0073B3 !important;
     border-color: #fff !important;
-    padding: .6em 4.5em !important;
+    padding: .6em 5.5em !important;
 }
 
 // !!!***---Price---***!!!
@@ -733,13 +734,41 @@ label{
     color: #fff !important;
 }
 
+// ALERT Plan
+.plan-popup{
+    text-align: center;
+}
+
+
+.plan-popup span{
+    text-transform: uppercase;
+    color: red;
+    font-size: 1.5em !important;
+    text-decoration: underline;
+}
 
 
 
 
 // !!!***---MEDIA QUERIES---***!!!
 
-@media (max-width: 1200px){
+@media (max-width: 1450px){
+    .form_long-form label{
+        font-size: 14px !important;
+    }
+    }
+
+@media (max-width: 1310px){
+    .call2act_block h2{
+        font-size: 38px;
+    }
+    #form_long button{
+        padding: .6em 3.5em !important;
+    }
+}
+
+
+@media (max-width: 1199px){
     .hdr-pic{
         position: relative;
     }
@@ -747,11 +776,40 @@ label{
         margin: 0 auto;
     }
     .call2act_block p{
-        margin: 1em 12em;
+        margin: 3em 12em;
     }
 
     .card button{
         left: 40% !important;
+    }
+
+    .form_long-form label{
+        font-size: 12px !important;
+    }
+
+    #form_long button{
+        padding: .6em 10% !important;
+        margin-top: 5%;
+    }
+
+    .form_long-form{
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
+    .form_long-form select,
+    .form_long-form input{
+        margin: 4% 0%;
+    }
+
+    .form_long-form label{
+        font-size: 15px !important;
+        margin-top: 4%;
+    }
+
+    .btn-comp-plans{
+        display: block;
+        width: 100%;
     }
 }
 
@@ -768,17 +826,25 @@ label{
     .card button{
         left: 35% !important;
     }
+
+    .nav-item,
+    .nav-item button{
+        margin-top: .5em !important;
+    }
 }
 
 @media (max-width: 800px){
     .call2act_block p{
-        margin: 1em 4em;
+        margin: 2em 4em;
     }
 }
 
 @media (max-width: 767px){
     .card button{
         left: 30% !important;
+    }
+    #test-popup h2{
+        font-size: 28px;
     }
 }
 
@@ -792,6 +858,10 @@ label{
 @media (max-width: 470px){
     .card button{
         left: 27% !important;
+    }
+
+    .call2act_block h2{
+        font-size: 30px !important;
     }
 }
 
